--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimaryDark">#770353</color>
+    <color name="colorAccent">#1d1d51</color>
+    <color name="white">#ffffff</color>
+    <color name="gray_light">#d3d3d3</color>
+    <color name="gray">#5e6061</color>
+    <color name="black">#000000</color>
 </resources>
