:lipstick: update ui style

--- a/app/src/main/res/layout/activity_main_tabs.xml
+++ b/app/src/main/res/layout/activity_main_tabs.xml
@@ -1,33 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <br.com.likeflix.customview.SimpleHeader
-        android:id="@+id/simpleHeader2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:headerTitle="Filme"
-        app:showBackButton="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:showSearchButton="true" />
-
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabMovieGenre"
+        style="@style/AppTabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@color/colorAccent"
-        app:tabIndicatorHeight="5dp"
         android:longClickable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        style="@style/AppTabLayout"
-        app:layout_constraintTop_toBottomOf="@+id/simpleHeader2">
-    </com.google.android.material.tabs.TabLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabIndicatorHeight="5dp" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vpMovies"
@@ -37,4 +26,20 @@
         android:overScrollMode="never"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabMovieGenre" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSearchMovie"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerVertical="true"
+        android:background="@color/gray_light"
+        android:elevation="5dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:spanCount="2"
+        tools:itemCount="10"
+        tools:listitem="@layout/movie_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
