--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -12,8 +12,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:showBackButton="true"
-        app:showSearchButton="false" />
+        app:showBackButton="true" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -24,18 +23,19 @@
         app:layout_constraintTop_toBottomOf="@+id/sHMovieDetail">
 
         <LinearLayout
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="24dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="24dp"
             android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/ivMovieCover"
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
-                android:scaleType="fitXY"
                 android:layout_marginStart="18dp"
                 android:layout_marginEnd="18dp"
+                android:scaleType="fitXY"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -47,19 +47,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="18dp"
                 android:layout_marginTop="8dp"
-                android:textSize="24sp"
+                android:text="Descrição"
                 android:textColor="@color/black"
-                android:text="Descrição"/>
+                android:textSize="24sp" />
+
             <TextView
                 android:id="@+id/tvMovieOverview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/gray"
                 android:layout_marginStart="18dp"
                 android:layout_marginTop="8dp"
-                android:textSize="16sp"
-                android:gravity="start"
                 android:layout_marginEnd="18dp"
+                android:gravity="start"
+                android:textColor="@color/gray"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ivMovieCover"
