--- a/app/src/main/res/layout/custom_header.xml
+++ b/app/src/main/res/layout/custom_header.xml
@@ -5,8 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="?android:attr/actionBarSize"
     android:background="@color/colorAccent"
-    android:paddingStart="8dp"
-    android:paddingEnd="12dp"
     tools:ignore="RtlSymmetry">
 
 
@@ -14,6 +12,7 @@
         android:id="@+id/btBackButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:layout_marginStart="8dp"
         android:padding="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,14 +33,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Esse é um header" />
-
-    <ImageView
-        android:id="@+id/btSearch"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_search" />
 </androidx.constraintlayout.widget.ConstraintLayout>
